--- a/index.html
+++ b/index.html
@@ -12,30 +12,9 @@
 <body>
     <div id="app" class="container-fluid">
         <div id="panel" class="bg-light sidebar"></div>
-        <div id="site" class="content">
-            <div class="row">
-                <div class="col-sm">
-                    <h1>hello</h1>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, fugiat.</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, fugiat.</p>
-                </div>
-                <div class="col-sm">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, fugiat.</p>
-                </div>
-                <div class="col-sm">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, fugiat.</p>
-                </div>
-            </div>
-        </div>
+        <div id="site" class="content"></div>
     </div>
+    <script src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
